# pycitydata

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: conf.py  index.md  introduction.md
docs/apidocs/: index.rst
docs/apidocs/pycitydata/: pycitydata.map.format_converter.md  pycitydata.map.map.md  pycitydata.map.md  pycitydata.md  pycitydata.sateimg._utils.md  pycitydata.sateimg.md  pycitydata.sateimg.sateimg.md  pycitydata.streetview.baidu.md  pycitydata.streetview.equirectangular.md  pycitydata.streetview.google.md  pycitydata.streetview.md  pycitydata.urbankg.kg.md  pycitydata.urbankg.md
examples/: extract_map_info.py  map.py  sateimg.py  split_persons_into_trips.py  streetview.py  urban_kg.py
pycitydata/: __init__.py
pycitydata/map/: __init__.py  map.py
pycitydata/sateimg/: sateimg.py
pycitydata/urbankg/: __init__.py
scripts/: gen_docs.sh  pre-commit
