[tool.poetry]
name = "pycitydata"
version = "1.0.3"
description = "City Data Python SDK"
authors = ["Jun Zhang <zhangjun990222@qq.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
homepage = "https://github.com/tsinghua-fib-lab/pycitydata"
documentation = "https://docs.fiblab.net/pycitydata"
repository = "https://github.com/tsinghua-fib-lab/pycitydata"


[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.24.0"
geojson = ">=3.1.0"
shapely = ">=2.0.0"
pymongo = ">=3.12.1"
pycityproto = ">=1.21.0"
pyproj = ">=3.0.0"
requests = ">=2.27.0"
scipy = ">=1.7.0"
geopandas = ">=0.9.0"
pillow = ">=10.0.0"
opencv-python = ">=4.8.0.0"
lru-dict = ">=1.3.0"
stringcase = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
